--- a/index.html
+++ b/index.html
@@ -33,6 +33,80 @@
 
     <!-- MAIN -->
     <main>
+        <div class="gigacontainer">
+           
+            <div class="row">
+                <div class="casella">          
+                    <img src="img/1.webp" alt="">
+                    <div class="sconto">-50%</div>
+                        <div class="sost">Sostenibilità</div>
+                            <div class="info">
+                            <small>Levi's</small>
+                            <h4>RELAXED FIT TEE UNISEX</h4>
+                            <strong class="prezzo">14,99&euro;</strong> <small>29,99&euro;</small>
+                        </div>
+                        <div class="heart">&hearts;</div>
+                    </div>
+
+                <div class="casella">
+                    <img src="img/2.webp" alt="">
+                    <div class="sconto">-30%</div>
+                        <div class="info">
+                          <small>Guess</small>
+                           <h4>ROSES TEE</h4>
+                           <strong class="prezzo">20,99&euro;</strong> <small>29,99&euro;</small>
+                        </div>
+                        <div class="heart">&hearts;</div>
+                    </div>
+
+                <div class="casella">
+                    <img src="img/3.webp" alt="">
+                    <div class="sconto">-30%</div>
+                        <div class="info">
+                          <small>Come Zucchero Filato</small>
+                          <h4>VOGLIA DI COLORI PASTELLO</h4>
+                          <strong class="prezzo">129,99&euro;</strong> <small>184,99&euro;</small>
+                        </div>
+                        <div class="heart">&hearts;</div>
+                    </div>
+                </div>
+
+            <div class="row">
+                <div class="casella">
+                    <img src="img/4.webp" alt="">
+                    <div class="sconto">-50%</div>
+                        <div class="sost">Sostenibilità</div>
+                            <div class="info">
+                              <small>Levi's</small>
+                              <h4>TEE UNISEX</h4>
+                              <strong class="prezzo">14,99&euro;</strong> <small>29,99&euro;</small>
+                            </div>
+                            <div class="heart">&hearts;</div>
+                </div>
+
+                <div class="casella">
+                    <img src="img/5.webp" alt="">
+                            <div class="info">
+                            <small>Maya Deluxe</small>
+                            <h4>STRIPE BODICE</h4>
+                            <strong class="prezzo">99,99&euro;</strong>
+                        </div>
+                        <div class="heart">&hearts;</div>
+                </div>
+
+                <div class="casella">
+                    <img src="img/6.webp" alt="">
+                        <div class="sost only">Sostenibilità</div>
+                            <div class="info">
+                            <small>Espirit</small>
+                            <h4>MAGLIONE-BLACK</h4>
+                            <strong class="prezzo">29,99&euro;</strong> 
+                        </div>
+                        <div class="heart">&hearts;</div>
+                </div>
+            </div>
+          
+        </div>
 
     </main>
 
